	- silently add default %defattr(-,root,root) for all packages.
	- fix: don't set handler if SIG_IGN is already set (#134474).
	- disable expensive header+payload verifies in default config.
	- adjust digest/signature stats to count #pkgs and bytes.
	- obsolete Serial:, Copyright:, and RHNPlatform: syntax in spec files.
	- permit Obsoletes: /path/to/file.

4.3.1 -> 4.3.2:
	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
	- disable file contexts into package metadata during build.
	- fix: "/path/foo.../bar" was losing a dot (#123844).
	- lua embedded in rpmio.
	- use lua to identify desired selinux file context regexes.
	- add 'requires' and 'conflicts' tag aliases.
	- python: return ds, not tuple, for ds iteration.
	- python: permit integer keys to ts.dbMatch().
	- xml: use <foo/> markup for empty tags.
	- xml: <integer/> instead of <integer>0</integer> markup.
	- fix: disable fingerprint generation on kernel paths.
	- add ppc8[25]60 arches.
	- fix: evaluate rather than default file_contexts path. (#127501).
	- avoid "can't happen" recursion while retrieving pubkeys.
	- add ppc32dy4 arch.
	- make peace with automake 1.9.1.
	- fix: defattr for rpm-libs (#130461).
	- print dependency loops as warning iff --anaconda is specified.
	- fix: mark uninstalled elf32 files in rpmdb to disable -Va checks.
	- ia64: add autorelocate_dcolor to macros.in.
	- disable static linking until libc*.a provides symbols.
	- fix: revert Obsoletes: "fix" (#134497).
	- fix: work around for dangling symlinks not globbed (#134362).
	- display caught signals to diagnose #134474 (gonna be SIGPIPE).
	- display N-V-R.A in dependency failure messages.
	- selinux: set "rpm_script_t" always, not just for /bin/sh.
	- honor inherited SIG_IGN when establishing rpmdb signal exit (#134474).

4.3 -> 4.3.1:
	- fix: don't add leading space to %* argv expansion (#119059).
	- scareMem = 0 everywhere, document deprecation phase out.
	- fix: add u+w to FIXPERMS.