@@ -20,6 +20,7 @@
 	- adjust digest/signature stats to count #pkgs and bytes.
 	- obsolete Serial:, Copyright:, and RHNPlatform: syntax in spec files.
 	- permit Obsoletes: /path/to/file.
+	- permit Conflicts: /path/to/file.
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
